--- a/frontend/src/styles/abstracts/_mixins.scss
+++ b/frontend/src/styles/abstracts/_mixins.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   gap: 3rem;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
 
 /// Mixin for Media Queries
